--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 <!--button end-->
 
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg pt-0 bg-primary sticky-top">
+<nav class="navbar navbar-expand-lg pt-0 bg-primary sticky-top" >
     <!-- Container wrapper -->
-    <div class="container-fluid shadow-lg">
+    <div class="container-fluid shadow-lg" >
         <div data-aos="fade-right" class="col-2">
             <!-- Navbar brand -->
             <a class="navbar-brand" href="#">
@@ -100,7 +100,7 @@
                     </li>
                     <!-- Dropdown -->
                     <li class="nav-item dropdown mx-auto">
-                        <a data-aos="fade-right" data-aos-delay="200" class="nav-link dropdown-toggle text-white"
+                        <a data-aos="fade-right" data-aos-delay="200" class="nav-link dropdown-toggle text-white btn-animate"
                            href="#" id="navbarDropdown" role="button"
                            data-mdb-toggle="dropdown" aria-expanded="false">
                             Продукция
@@ -192,23 +192,27 @@
 <!-- Navbar -->
 
 <!--SWIPER-->
-<section class="mb-10">
+<section class="mb-0" id="header">
     <div class="container-fluid px-0" style="background-image:url(static/images/D75_4962.jpg);
         background-position: 50% 10%;
         background-size: cover;
-        height: 300px;">
-        <div class="row">
-            <div class="col-0 col-lg-5"></div>
-            <div class="col-12 col-lg-7 text-center text-primary"><h1 class="mt-5 pt-5">Никопольский завод
+        height: 400px;">
+        <div class="row mx-0">
+            <div class="col-0 col-lg-5 mx-0"></div>
+            <div class="col-12 col-lg-7 text-center text-primary mx-0 px-0"><h1 class="mt-5 pt-5">Никопольский завод
                 трубопроводной арматуры</h1>
             </div>
         </div>
-
-
     </div>
 </section>
 <!--SWIPER END-->
-
+<section style="background: linear-gradient(0deg, rgba(51, 51, 51, 0.8), rgba(51, 51, 51, 0.8)), url(static/images/bg1.jpg);
+        height: 100px;
+        background-position: 50% 0%;
+        background-size: 150vh;
+        background-repeat: repeat;
+        background-attachment: fixed">
+</section>
 <!--ABOUT US-->
 <section class="my-5 text-center text-lg-start">
     <!-- Jumbotron -->
