--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
 <!--LOADING SPINNER END-->
 
 <!--button up-->
-<a id="scrollToTopButton" class="fs-1 shadow-0 mx-2 btn-rounded text-primary btn-animate"
+<a id="scrollToTopButton" class="fs-3 shadow-0 mx-2 btn-rounded text-primary btn-animate"
    style="position: fixed; bottom: 50px; right: 40px; display: none; z-index: 100"
    href="#header">
-    <i class="fas fa-arrow-up-long"></i>
+    <i class="fas fa-arrow-up-long fa-2x" ></i>
 </a>
 <script src="static/js/button_up.js"></script>
 <!--button end-->
 
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg py-1 bg-secondary bg-gradient sticky-top">
+<nav class="navbar navbar-expand-lg py-1 bg-light bg-gradient sticky-top">
     <!-- Container wrapper -->
     <div class="container-fluid shadow-lg">
         <div data-aos="fade-right" class="col-2">
@@ -91,15 +91,15 @@
                 <ul class="navbar-nav">
                     <!-- Link -->
                     <li class="nav-item btn-animate" data-mdb-ripple-color="red">
-                        <a data-aos="fade-right" data-aos-delay="600" class="nav-link text-white" href="#">Main</a>
+                        <a data-aos="fade-right" data-aos-delay="600" class="nav-link " href="#">Main</a>
                     </li>
                     <li class="nav-item btn-animate">
-                        <a data-aos="fade-right" data-aos-delay="400" class="nav-link text-white" href="#">About us</a>
+                        <a data-aos="fade-right" data-aos-delay="400" class="nav-link " href="#">About us</a>
                     </li>
                     <!-- Dropdown -->
                     <li class="nav-item dropdown mx-auto">
                         <a data-aos="fade-right" data-aos-delay="200"
-                           class="nav-link dropdown-toggle text-white btn-animate"
+                           class="nav-link dropdown-toggle  btn-animate"
                            href="#" id="navbarDropdown" role="button"
                            data-mdb-toggle="dropdown" aria-expanded="false">
                             Our products
@@ -107,7 +107,7 @@
                         <!-- Dropdown menu -->
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li>
-                                <a class="dropdown-item ripple" data-mdb-ripple-color="warning" href="#">Badges /
+                                <a class="dropdown-item ripple" data-mdb-ripple-color="success" href="#">Badges /
                                     Pads</a>
                             </li>
                             <li>
@@ -130,7 +130,7 @@
                         </ul>
                     </li>
                     <li data-aos="fade-right" class="nav-item">
-                        <a class="nav-link text-white btn-animate" href="#">Contacts</a>
+                        <a class="nav-link btn-animate" href="#">Contacts</a>
                     </li>
                 </ul>
             </div>
@@ -147,7 +147,7 @@
                             role="button"
                             data-mdb-toggle="dropdown"
                             aria-expanded="false"
-                            style="color: white">
+                            style="color: black">
                         <i class="flag-us flag m-0"></i>
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="languageDropdown">
@@ -185,7 +185,7 @@
 <!-- Navbar -->
 
 <!--SWIPER-->
-<section class="container-fluid mb-9 shadow" id="header"
+<section class="container-fluid mb-9 shadow-lg" id="header"
          style="background: linear-gradient(0deg, rgba(51, 51, 51, 0.8), rgba(51, 51, 51, 0.8)), url(static/images/bg1.jpg);
         height: 400px;
         background-position: 0% 90%;
@@ -224,11 +224,11 @@
         <div class="row g-0">
             <div data-aos="fade-right" data-aos-duration="1000" class="col-lg-6 my-auto"><img
                     src="static/images/MLIT-01.jpg"
-                    class="w-75 rounded-4 shadow-4" alt="" draggable="false"></div>
+                    class="w-75 rounded-4 shadowlg" alt="" draggable="false"></div>
             <div class="col-lg-6 my-auto">
                 <div class="card cascading-right"
                      style=" background: hsla(0, 0%, 100%, 0.55); backdrop-filter: blur(30px)">
-                    <div class="card-body py-5 px-md-5 shadow-5"><h2 class="fw-bold mb-4">About us</h2>
+                    <div class="card-body py-5 px-md-5 shadow-lg"><h2 class="fw-bold mb-4">About us</h2>
                         <p class="text-muted mb-4">LIMITED LIABILITY COMPANY "M-LIT" (Nikopol Pipeline Valve Plant,
                             formerly Nikopol Foundry and Mechanical Plant "Bolshevik") is a large specialized enterprise
                             known in Ukraine and abroad for the production of shut-off valves.</p>
@@ -287,21 +287,29 @@
             <u data-aos="fade-down" data-aos-delay="400" class="text-success">PRODUCTS</u>
         </h2>
         <div class="container-fluid text-center">
-            <img draggable="false" src="static/images/rw-removebg-preview.png" alt=""
-                 class="img-fluid w-75" style="">
+            <img data-aos="fade-left" draggable="false" src="static/images/Train-PNG-File-Download-Free.png" alt=""
+                 class="img-fluid w-25 rounded-circle" style="">
         </div>
         <!--        ЦВЕТ ЗЕЛЕНЫЙ -->
-        <div class="row">
-            <div class="col-12 col-md-6 text-center">
-                <div data-aos="fade-right"
-                     class="bg-image hover-zoom ripple rounded-4 mb-4 text-center py-3"
-                     data-mdb-ripple-color="success" style="height: auto">
-                    <img data-aos-delay="200" draggable="false"
-                         src="static/images/кл2-removebg-preview.png" class="w-25 btn-animate " alt="">
-                    <img draggable="false" src="static/images/кл1-removebg-preview.png"
-                         class="w-50 btn-animate" alt="">
-                </div>
-
+        <div class="row gy-3">
+            <div data-aos="fade-right"
+                 class="bg-image hover-zoom ripple rounded-4 mb-4 text-center py-3"
+                 data-mdb-ripple-color="success" style="height: auto">
+                <img data-aos-delay="200" draggable="false"
+                     src="static/images/кл2-removebg-preview.png"
+                     class="w-25 btn-animate me-2" alt="" style="max-height: 150px; max-width: 150px;">
+                <img draggable="false" src="static/images/кл1-removebg-preview.png"
+                     class="w-25 btn-animate me-2" style="max-height: 150px; max-width: 150px" alt="">
+                <img draggable="false" src="static/images/кт1-removebg-preview.png"
+                     class="img-fluid w-25 btn-animate me-2" style="max-height: 150px; max-width: 150px" alt="">
+                <img draggable="false" style="max-height: 150px; max-width: 150px"
+                     src="static/images/кт2-removebg-preview.png" class="img-fluid w-25 btn-animate me-2" alt="">
+                <img draggable="false" style="max-height: 150px; max-width: 150px"
+                     src="static/images/кт3-removebg-preview.png" class="img-fluid w-25 btn-animate me-2" alt="">
+                <img draggable="false" style="max-height: 150px; max-width: 150px"
+                     src="static/images/кт4-removebg-preview.png" class="img-fluid w-25 btn-animate me-2" alt="">
+            </div>
+            <div class="col-12 col-md-5 text-center mx-auto">
                 <h4 data-aos="fade-up" class="fw-bold">Wadges</h4>
                 <div data-aos="fade-up" class="mb-2 text-success small">
                     <i class="fas fa-globe-americas me-2"></i>
@@ -317,18 +325,7 @@
                         </span>
                 </button>
             </div>
-            <div class="col-12 col-md-6 text-center">
-                <div data-aos="fade-up" class="bg-image hover-zoom ripple rounded-4 mb-4 text-center py-3 "
-                     data-mdb-ripple-color="success" style="height: auto">
-                    <img draggable="false" src="static/images/кт1-removebg-preview.png"
-                         class="img-fluid w-25 btn-animate" alt="">
-                    <img draggable="false"
-                         src="static/images/кт2-removebg-preview.png" class="img-fluid w-25 btn-animate" alt="">
-                    <img draggable="false"
-                         src="static/images/кт3-removebg-preview.png" class="img-fluid w-25 btn-animate" alt="">
-                    <img draggable="false"
-                         src="static/images/кт4-removebg-preview.png" class="img-fluid w-25 btn-animate" alt="">
-                </div>
+            <div class="col-12 col-md-5 text-center mx-auto">
                 <h4 data-aos="fade-up" class="fw-bold">Pads</h4>
                 <div data-aos="fade-up" class="mb-2 text-success small">
                     <i class="fas fa-check-circle me-2"></i>
@@ -428,7 +425,7 @@
 
 <!--OUR PRODUCTS IRON CASTING-->
 <section class="container my-5 mb-10">
-    <div class="card mb-3">
+    <div class="card mb-3 shadow-lg">
         <div class="row g-0 d-flex align-items-center">
             <div class="col-lg-5 col-xl-4 d-none d-lg-flex"><img
                     src="static/images/D75_5057.jpg" alt=""
@@ -520,7 +517,7 @@
     </h2>
     <div class="row gx-lg-5 align-items-center">
         <div class="col-lg-5 mb-5 mb-lg-0">
-            <div data-aos="fade-right" data-aos-duration="1000" class="bg-image rounded-5 shadow-5-strong"
+            <div data-aos="fade-right" data-aos-duration="1000" class="bg-image rounded-5 shadow-lg"
                  style="background-image: url(static/images/D75_4995.jpg); height: 560px; background-size: cover; background-position: 50% 50%;">
                 <div data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000" class="mask1"
                      style="background-color: rgba(0, 0, 0, 0.5)">
@@ -539,7 +536,7 @@
         <div class="col-lg-7 mb-4 mb-lg-0">
             <div data-aos="fade-up" class="d-flex align-items-start mb-5">
                 <div class="flex-shrink-0">
-                    <div class="p-3 rounded-4 shadow-2-strong" style="background-color: hsl(231, 52.6%, 20%)">
+                    <div class="p-3 rounded-4 shadow" style="background-color: hsl(231, 52.6%, 20%)">
                         <i class="fas fa-industry fa-lg text-white"></i></div>
                 </div>
                 <div class="flex-grow-1 ms-4">
@@ -551,7 +548,7 @@
             </div>
             <div data-aos="fade-up" class="d-flex align-items-start mb-5">
                 <div class="flex-shrink-0">
-                    <div class="p-3 rounded-4 shadow-2-strong" style="background-color: hsl(231, 52.6%, 20%)"><i
+                    <div class="p-3 rounded-4 shadow" style="background-color: hsl(231, 52.6%, 20%)"><i
                             class="fas fa-shield-alt fa-lg text-white fa-fw"></i></div>
                 </div>
                 <div class="flex-grow-1 ms-4"><p class="fw-bold mb-1">Modern equipment</p>
@@ -561,7 +558,7 @@
             </div>
             <div data-aos="fade-up" class="d-flex align-items-start mb-5">
                 <div class="flex-shrink-0">
-                    <div class="p-3 rounded-4 shadow-2-strong" style="background-color: hsl(231, 52.6%, 20%)"><i
+                    <div class="p-3 rounded-4 shadow" style="background-color: hsl(231, 52.6%, 20%)"><i
                             class="fas fa-shipping-fast fa-lg text-white fa-fw"></i></div>
                 </div>
                 <div class="flex-grow-1 ms-4"><p class="fw-bold mb-1">Fast delivery</p>
@@ -571,7 +568,7 @@
             </div>
             <div data-aos="fade-up" class="d-flex align-items-start">
                 <div class="flex-shrink-0">
-                    <div class="p-3 rounded-4 shadow-2-strong" style="background-color: hsl(231, 52.6%, 20%)"><i
+                    <div class="p-3 rounded-4 shadow" style="background-color: hsl(231, 52.6%, 20%)"><i
                             class="fas fa-chart-pie fa-lg text-white fa-fw"></i></div>
                 </div>
                 <div class="flex-grow-1 ms-4"><p class="fw-bold mb-1">Quality is guaranteed</p>
@@ -719,7 +716,7 @@
                         <div class="col-md-6 mb-5">
                             <div class="d-flex align-items-start">
                                 <div class="flex-shrink-0">
-                                    <div class="p-3 bg-primary rounded-4 shadow-2-strong"><i
+                                    <div class="p-3 bg-primary rounded-4 shadow"><i
                                             class="fas fa-headset fa-lg text-white fa-fw"></i></div>
                                 </div>
                                 <div class="flex-grow-1 ms-4"><p class="fw-bold mb-1">
@@ -731,7 +728,7 @@
                         <div class="col-md-6 mb-5">
                             <div class="d-flex align-items-start">
                                 <div class="flex-shrink-0">
-                                    <div class="p-3 bg-primary rounded-4 shadow-2-strong"><i
+                                    <div class="p-3 bg-primary rounded-4 shadow"><i
                                             class="fas fa-dollar-sign fa-lg text-white fa-fw"></i></div>
                                 </div>
                                 <div class="flex-grow-1 ms-4"><p class="fw-bold mb-1">
@@ -743,7 +740,7 @@
                         <div class="col-md-6 mb-5">
                             <div class="d-flex align-items-start">
                                 <div class="flex-shrink-0">
-                                    <div class="p-3 bg-primary rounded-4 shadow-2-strong"><i
+                                    <div class="p-3 bg-primary rounded-4 shadow"><i
                                             class="fas fa-newspaper fa-lg text-white fa-fw"></i></div>
                                 </div>
                                 <div class="flex-grow-1 ms-4"><p class="fw-bold mb-1">
@@ -755,7 +752,7 @@
                         <div class="col-md-6 mb-5">
                             <div class="d-flex align-items-start">
                                 <div class="flex-shrink-0">
-                                    <div class="p-3 bg-primary rounded-4 shadow-2-strong"><i
+                                    <div class="p-3 bg-primary rounded-4 shadow"><i
                                             class="fas fa-bug fa-lg text-white fa-fw"></i></div>
                                 </div>
                                 <div class="flex-grow-1 ms-4"><p class="fw-bold mb-1">
@@ -779,7 +776,6 @@
         <div class="container py-1">
             <div class="row">
                 <div class="col-12 text-center text-white my-0 py-0">
-                    <a href="#"><img src="static/images/logo2.png" alt="НЗТА" style="width: 60px"></a>
                     Copyright © 2014-2023 ООО «М-ЛИТ», Все права защищены
                 </div>
             </div>
