--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div data-aos="fade-right" class="col-2">
             <!-- Navbar brand -->
             <a class="navbar-brand" href="#">
-                <img class="im-fluid mx-auto" src="static/images/logo2.png" alt="" style="max-width: 70px">
+                <img class="im-fluid mx-auto" src="static/images/logo.png" alt="" style="max-width: 70px">
             </a>
         </div>
         <div class="col-8 text-center">
